add send point batch test
