# coin-api/controllers/Thanks.js
@@ -11,3 +11,11 @@ module.exports.get__thanks_transactions = function get__thanks_transactions (req
 module.exports.post__thanks_send = function post__thanks_send (req, res, next) {
   Thanks.post__thanks_send(req.swagger.params, res, next);
 };
+
+module.exports.get__thanks_term = function get__thanks_term (req, res, next) {
+  Thanks.get__thanks_term(req.swagger.params, res, next);
+};
+
+module.exports.post__thanks_term = function post__thanks_term (req, res, next) {
+  Thanks.post__thanks_term(req.swagger.params, res, next);
+};
